@@ -35,8 +35,8 @@ struct FIGCompound : public FIGObject
    Type getType() const { return Type_Compound; }
    /// Read the object
    void read(FIGLexer& in,FIGFile& file);
-   /// Get the maximum y coordinate
-   double getMaxY() const;
+   /// Get the bounding box
+   Bounds getBounds() const;
 };
 //---------------------------------------------------------------------------
 #endif
