@@ -43,8 +43,8 @@ struct FIGPolyline : public FIGLineObject
    Type getType() const { return Type_Polyline; }
    /// Read the object
    void read(FIGLexer& in,FIGFile& file);
-   /// Get the maximum y coordinate
-   double getMaxY() const;
+   /// Get the bounding box
+   Bounds getBounds() const;
 };
 //---------------------------------------------------------------------------
 #endif
