@@ -41,8 +41,8 @@ struct FIGText : public FIGObject
    Type getType() const { return Type_Text; }
    /// Read the object
    void read(FIGLexer& in,FIGFile& file);
-   /// Get the maximum y coordinate
-   double getMaxY() const;
+   /// Get the bounding box
+   Bounds getBounds() const;
 };
 //---------------------------------------------------------------------------
 #endif
