@@ -1,2 +1,5 @@
+2006-07-02 Thomas Neumann
+   Improved bounding box calculation
+
 2005-06-27 Thomas Neumann
    Initial release.
